--- a/boutique.html
+++ b/boutique.html
@@ -46,9 +46,12 @@
                             </h2>
                         </div>
                     </div>
-                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/adj-mug.jpg" alt="..." />
+                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/adj-mug.jpg" alt="Mug drôle" />
                     <div class="product-item-description d-flex me-auto">
-                        <div class="bg-faded p-5 rounded"><p class="mb-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam quidem repellendus minus animi obcaecati recusandae, nam, labore repudiandae sed repellat natus quis est ab omnis voluptas, ullam sunt officia nesciunt.</p></div>
+                        <div class="bg-faded p-5 rounded"><br class="mb-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam quidem repellendus minus animi obcaecati recusandae, nam, labore repudiandae sed repellat natus quis est ab omnis voluptas, ullam sunt officia nesciunt.
+                        </br>
+                            <a href="https://www.amazon.fr/quotedazur-Mug-Bonne-Humeur-Gueule/dp/B09BZPTX3R/ref=sr_1_6?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1FPA07D4I93L0&keywords=mug&qid=1689512346&sprefix=mug%2Caps%2C90&sr=8-6&th=1">Clique ici pour venter ton mug à ton boulot</a>
+                        </p></div>
                     </div>
                 </div>
             </div>
@@ -60,13 +63,17 @@
                         <div class="bg-faded p-5 d-flex me-auto rounded">
                             <h2 class="section-heading mb-0">
                                 <span class="section-heading-upper">Petit frisson sur la route ?</span>
-                                <span class="section-heading-lower">Procurez-vous un sweat</span>
+                                <span class="section-heading-lower">Procure-toi un sweat</span>
                             </h2>
                         </div>
                     </div>
-                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/sweat.jpg" alt="..." />
+                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/sweat.jpg" alt="Sweat drôle" />
                     <div class="product-item-description d-flex ms-auto">
-                        <div class="bg-faded p-5 rounded"><p class="mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis odit architecto modi quia beatae placeat, sint ipsam velit soluta saepe assumenda ad ipsum autem maxime magnam. Quisquam officia a quidem!</p></div>
+                        <div class="bg-faded p-5 rounded"><p class="mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis odit architecto modi quia beatae placeat, sint ipsam velit soluta saepe assumenda ad ipsum autem maxime magnam. Quisquam officia a quidem!
+                            <br>
+                            <a href="https://www.amazon.fr/Prochaine-Connerie-En-Cours-Chargement/dp/B08HLCBD5L/ref=sr_1_12?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1UPMKGW707LAT&keywords=sweat+dr%C3%B4le&qid=1689512619&sprefix=sweat+dr%C3%B4le%2Caps%2C79&sr=8-12">Clique ici pour ne plus avoir froid</a>
+                        </p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -78,13 +85,16 @@
                         <div class="bg-faded p-5 d-flex ms-auto rounded">
                             <h2 class="section-heading mb-0">
                                 <span class="section-heading-upper">Pour une blague accrocheuse...</span>
-                                <span class="section-heading-lower"><Epingle-moi></Epingle-moi></span>
+                                <span class="section-heading-lower">Epingle-moi</span>
                             </h2>
                         </div>
                     </div>
-                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/pins.PNG" alt="..." />
+                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/pins.PNG" alt="Pin drôle à accrocher sur le vêtement" />
                     <div class="product-item-description d-flex me-auto">
-                        <div class="bg-faded p-5 rounded"><p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla minima ratione architecto excepturi explicabo amet eaque pariatur totam maiores libero beatae iure tempore laborum, magnam nobis? Expedita nostrum incidunt esse?</p></div>
+                        <div class="bg-faded p-5 rounded"><p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla minima ratione architecto excepturi explicabo amet eaque pariatur totam maiores libero beatae iure tempore laborum, magnam nobis? Expedita nostrum incidunt esse?
+                            <br>
+                            <a href="https://www.etsy.com/fr/listing/1488163448/collection-de-broches-en-email-de?ga_order=most_relevant&ga_search_type=all&ga_view_type=gallery&ga_search_query=pins+rigolo&ref=sr_gallery-1-1&pro=1&organic_search_click=1">Clique ici pour agrémenter ton magnifique sweat que tu viens d'acheter...</a>
+                        </p></div>
                     </div>
                 </div>
             </div>
