RS ajouté, commencement registre JSON. MAJ footer.

--- a/about.html
+++ b/about.html
@@ -82,6 +82,10 @@
                         damburton@blagounette.be
                         </br>
                         07 99 32 45 09
+                        <br>
+                        <a href="https://www.facebook.com/profile.php?id=100093982512086"><img src="./assets/img/facebook-logo-10.png" alt="Logo facebook" id="facebook"></a>
+                        <a href="https://www.instagram.com/damdaammdmmt/?hl=fr"><img src="./assets/img/instagram-logo-eps-png-instagram-logo-1784.png" alt="Logo instagram" id="instagram"></a>
+                        <a href="https://www.tiktok.com/@blagounette59"><img src="./assets/img/TikTok-Logo.png" alt="Logo tiktok" id="tiktok"></a>
                         </p>
                     </div>
                 </div>
@@ -90,7 +94,7 @@
     </section>
     <section class="page-section about-heading">
         <div class="container">
-            <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="assets/img/about.jpg" alt="..." />
+            <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="assets/img/about.jpg" alt="sponsors" />
             <div class="about-heading-content">
                 <div class="row">
                     <div class="col-xl-9 col-lg-10 mx-auto">
@@ -113,7 +117,8 @@
     </section>
     <footer class="footer text-faded text-center py-5">
         <div class="container">
-            <p class="m-0 small">Copyright &copy; Blagounette 2023 |Dam pour la nurserie, CSS119</p>
+            <div><img src="./assets/img/logo.PNG" alt="Logo Blagounette sobre"></div>
+            <p class="m-0 small">Copyright &copy; Blagounette 2023 |Dam pour la nurserie, CSS119</p></div>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
