--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
                 </div>
             </div>
         </section>
-        <footer class="footer text-faded text-center py-5">
-            <div class="container"><p class="m-0 small">Copyright &copy; Blagounette 2023 |Dam pour la nurserie, CSS119</p></div>
+        <footer class="footer text-faded text-center py-5">            
+            <div class="container">
+                <div><img src="./assets/img/logo.PNG" alt="Logo Blagounette sobre"></div>
+                <p class="m-0 small">Copyright &copy; Blagounette 2023 |Dam pour la nurserie, CSS119</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
