--- a/boutique.html
+++ b/boutique.html
@@ -1,112 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>B O U T I Q U E</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-    <body>
-        <header>
-            <h1 class="site-heading text-center text-faded d-none d-lg-block">
-                <span class="site-heading-upper text-primary mb-3">B L A G O U N E T T E  B Y  D A M</span>
-                <span class="site-heading-lower">Ici, nous ne demandons qu'à en rire ! </span>
-            </h1>
-        </header>
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
-            <div class="container">
-                <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">B l a g o u n e t t e</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mx-auto">
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="index.html">Accueil</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="blagues.html">Blagues</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="boutique.html">Boutique</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="about.html">A propos</a></li>
-                    </ul>
-                </div>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>B O U T I Q U E</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Google fonts-->
+    <link
+        href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
+</head>
+
+<body>
+    <header>
+        <h1 class="site-heading text-center text-faded d-none d-lg-block">
+            <span class="site-heading-upper text-primary mb-3">B L A G O U N E T T E B Y D A M</span>
+            <span class="site-heading-lower">Ici, nous ne demandons qu'à en rire ! </span>
+        </h1>
+    </header>
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">B l a g o u n e t t e</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="index.html">Accueil</a></li>
+                    <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="blagues.html">Blagues</a></li>
+                    <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="boutique.html">Boutique</a>
+                    </li>
+                    <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="about.html">A propos</a></li>
+                </ul>
             </div>
-        </nav>
-        <section class="page-section">
-            <div class="container">
-                <div class="product-item">
-                    <div class="product-item-title d-flex">
-                        <div class="bg-faded p-5 d-flex ms-auto rounded">
-                            <h2 class="section-heading mb-0">
-                                <span class="section-heading-upper">Article du jour</span>
-                                <span class="section-heading-lower">M u g s </span>
-                            </h2>
-                        </div>
+        </div>
+    </nav>
+    <section class="page-section">
+        <div class="container">
+            <div class="product-item">
+                <div class="product-item-title d-flex">
+                    <div class="bg-faded p-5 d-flex ms-auto rounded">
+                        <h2 class="section-heading mb-0">
+                            <span class="section-heading-upper">Article du jour</span>
+                            <span class="section-heading-lower">M u g stylé</span>
+                        </h2>
                     </div>
-                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/adj-mug.jpg" alt="Mug drôle" />
-                    <div class="product-item-description d-flex me-auto">
-                        <div class="bg-faded p-5 rounded"><br class="mb-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam quidem repellendus minus animi obcaecati recusandae, nam, labore repudiandae sed repellat natus quis est ab omnis voluptas, ullam sunt officia nesciunt.
+                </div>
+                <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/adj-mug.jpg"
+                    alt="Mug drôle" />
+                <div class="product-item-description d-flex me-auto">
+                    <div class="bg-faded p-5 rounded"><br class="mb-0">Lorem ipsum, dolor sit amet consectetur
+                        adipisicing elit. Ipsam quidem repellendus minus animi obcaecati recusandae, nam, labore
+                        repudiandae sed repellat natus quis est ab omnis voluptas, ullam sunt officia nesciunt.
                         </br>
-                            <a href="https://www.amazon.fr/quotedazur-Mug-Bonne-Humeur-Gueule/dp/B09BZPTX3R/ref=sr_1_6?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1FPA07D4I93L0&keywords=mug&qid=1689512346&sprefix=mug%2Caps%2C90&sr=8-6&th=1">Clique ici pour venter ton mug à ton boulot</a>
-                        </p></div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="page-section">
-            <div class="container">
-                <div class="product-item">
-                    <div class="product-item-title d-flex">
-                        <div class="bg-faded p-5 d-flex me-auto rounded">
-                            <h2 class="section-heading mb-0">
-                                <span class="section-heading-upper">Petit frisson sur la route ?</span>
-                                <span class="section-heading-lower">Procure-toi un sweat</span>
-                            </h2>
-                        </div>
-                    </div>
-                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/sweat.jpg" alt="Sweat drôle" />
-                    <div class="product-item-description d-flex ms-auto">
-                        <div class="bg-faded p-5 rounded"><p class="mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis odit architecto modi quia beatae placeat, sint ipsam velit soluta saepe assumenda ad ipsum autem maxime magnam. Quisquam officia a quidem!
-                            <br>
-                            <a href="https://www.amazon.fr/Prochaine-Connerie-En-Cours-Chargement/dp/B08HLCBD5L/ref=sr_1_12?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1UPMKGW707LAT&keywords=sweat+dr%C3%B4le&qid=1689512619&sprefix=sweat+dr%C3%B4le%2Caps%2C79&sr=8-12">Clique ici pour ne plus avoir froid</a>
+                        <a
+                            href="https://www.amazon.fr/quotedazur-Mug-Bonne-Humeur-Gueule/dp/B09BZPTX3R/ref=sr_1_6?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1FPA07D4I93L0&keywords=mug&qid=1689512346&sprefix=mug%2Caps%2C90&sr=8-6&th=1">Clique
+                            ici pour venter ton mug à ton boulot</a>
                         </p>
-                        </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <section class="page-section">
-            <div class="container">
-                <div class="product-item">
-                    <div class="product-item-title d-flex">
-                        <div class="bg-faded p-5 d-flex ms-auto rounded">
-                            <h2 class="section-heading mb-0">
-                                <span class="section-heading-upper">Pour une blague accrocheuse...</span>
-                                <span class="section-heading-lower">Epingle-moi</span>
-                            </h2>
-                        </div>
+        </div>
+    </section>
+    <section class="page-section">
+        <div class="container">
+            <div class="product-item">
+                <div class="product-item-title d-flex">
+                    <div class="bg-faded p-5 d-flex me-auto rounded">
+                        <h2 class="section-heading mb-0">
+                            <span class="section-heading-upper">Petit frisson sur la route ?</span>
+                            <span class="section-heading-lower">Procure-toi un sweat</span>
+                        </h2>
                     </div>
-                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/pins.PNG" alt="Pin drôle à accrocher sur le vêtement" />
-                    <div class="product-item-description d-flex me-auto">
-                        <div class="bg-faded p-5 rounded"><p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla minima ratione architecto excepturi explicabo amet eaque pariatur totam maiores libero beatae iure tempore laborum, magnam nobis? Expedita nostrum incidunt esse?
+                </div>
+                <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/sweat.jpg"
+                    alt="Sweat drôle" />
+                <div class="product-item-description d-flex ms-auto">
+                    <div class="bg-faded p-5 rounded">
+                        <p class="mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis odit
+                            architecto modi quia beatae placeat, sint ipsam velit soluta saepe assumenda ad ipsum autem
+                            maxime magnam. Quisquam officia a quidem!
                             <br>
-                            <a href="https://www.etsy.com/fr/listing/1488163448/collection-de-broches-en-email-de?ga_order=most_relevant&ga_search_type=all&ga_view_type=gallery&ga_search_query=pins+rigolo&ref=sr_gallery-1-1&pro=1&organic_search_click=1">Clique ici pour agrémenter ton magnifique sweat que tu viens d'acheter...</a>
-                        </p></div>
+                            <a
+                                href="https://www.amazon.fr/Prochaine-Connerie-En-Cours-Chargement/dp/B08HLCBD5L/ref=sr_1_12?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1UPMKGW707LAT&keywords=sweat+dr%C3%B4le&qid=1689512619&sprefix=sweat+dr%C3%B4le%2Caps%2C79&sr=8-12">Clique
+                                ici pour ne plus avoir froid</a>
+                        </p>
                     </div>
                 </div>
             </div>
-        </section>
-        <footer class="footer text-faded text-center py-5">
-            <div class="container">
-                <div><img src="./assets/img/logo.PNG" alt="Logo Blagounette sobre"></div>
-                <p class="m-0 small">Copyright &copy; Blagounette 2023 |Dam pour la nurserie, CSS119</p></div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
+        </div>
+    </section>
+    <section class="page-section">
+        <div class="container">
+            <div class="product-item">
+                <div class="product-item-title d-flex">
+                    <div class="bg-faded p-5 d-flex ms-auto rounded">
+                        <h2 class="section-heading mb-0">
+                            <span class="section-heading-upper">Pour une blague accrocheuse...</span>
+                            <span class="section-heading-lower">Epingle-moi</span>
+                        </h2>
+                    </div>
+                </div>
+                <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/pins.PNG"
+                    alt="Pin drôle à accrocher sur le vêtement" />
+                <div class="product-item-description d-flex me-auto">
+                    <div class="bg-faded p-5 rounded">
+                        <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla minima ratione
+                            architecto excepturi explicabo amet eaque pariatur totam maiores libero beatae iure tempore
+                            laborum, magnam nobis? Expedita nostrum incidunt esse?
+                            <br>
+                            <a
+                                href="https://www.etsy.com/fr/listing/1488163448/collection-de-broches-en-email-de?ga_order=most_relevant&ga_search_type=all&ga_view_type=gallery&ga_search_query=pins+rigolo&ref=sr_gallery-1-1&pro=1&organic_search_click=1">Clique
+                                ici pour agrémenter ton magnifique sweat que tu viens d'acheter...</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer text-faded text-center py-5">
+        <div class="container">
+            <div><img src="./assets/img/logo.PNG" alt="Logo Blagounette sobre"></div>
+            <p class="m-0 small">Copyright &copy; Blagounette 2023 |Dam pour la nurserie, CSS119</p>
+        </div>
+    </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
+</body>
+
 </html>
