FIX: logo footer

--- a/boutique.html
+++ b/boutique.html
@@ -127,7 +127,7 @@
     </section>
     <footer class="footer text-faded text-center py-5">
         <div class="container">
-            <div><img src="./assets/img/logo.PNG" alt="Logo Blagounette sobre"></div>
+            <div><img src="./assets/img/logo.png" alt="Logo Blagounette sobre"></div>
             <p class="m-0 small">Copyright &copy; Blagounette 2023 |Dam pour la nurserie, CSS119</p>
         </div>
     </footer>
