--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <span class="section-heading-upper">Blague du jour</span>
                             <span class="section-heading-lower">Catégorie tout public</span>
                         </h2>
-                        <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe commodi, accusamus, quis cupiditate repudiandae amet ipsam officia beatae distinctio molestiae pariatur assumenda quae tempore vel nobis! Distinctio esse culpa magni?</p>
+                        <p class="mb-3">Comment appelle-t-on un chat tout-terrain ? Un cat cat.</p>
                         <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="blagues.html">Lire d'autres blagues</a></div>
                     </div>
                 </div>
