FEAT/FIX: favicon, articles et blagues

--- a/article/article.html
+++ b/article/article.html
@@ -8,7 +8,7 @@
     <meta name="author" content="" />
     <title>A r t i c l e s</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon.ico">
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
@@ -78,12 +78,13 @@
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- Product image-->
-                        <img class="card-img-top" src="../assets/img/pins1.jpg" alt="..." />
+                       <div class="shop1"> <img class="card-img-top" src="../assets/img/pins1.jpg" alt="..." /></div>
                         <!-- Product details-->
                         <div class="card-body p-4">
-                            <div class="text-center">
+                            <div class="text-center bg-warning">
                                 <!-- Product name-->
-                                <h5 class="fw-bolder">Pin's </h5>
+                                <h5 class="fw-bolder bg-warning">Pin's 
+                                </h5>
                                 <!-- Product price-->
                                 3.59€
                             </div>
@@ -102,22 +103,16 @@
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
                             Soldé!</div>
                         <!-- Product image-->
-                        <img class="card-img-top" src="../assets/img/sweat1.jpg" alt="..." />
+                        <div class="shop1"> <img class="card-img-top" src="../assets/img/sweat1.jpg" alt="..." /></div>
                         <!-- Product details-->
                         <div class="card-body p-4">
-                            <div class="text-center">
+
+                            <div class="text-center bg-warning">
                                 <!-- Product name-->
-                                <h5 class="fw-bolder">Sweat trop stylé</h5>
-                                <!-- Product reviews-->
-                                <div class="d-flex justify-content-center small text-warning mb-2">
-                                    <div class="bi-star-fill"></div>
-                                    <div class="bi-star-fill"></div>
-                                    <div class="bi-star-fill"></div>
-                                    <div class="bi-star-fill"></div>
-                                    <div class="bi-star-fill"></div>
-                                </div>
+                                <h5 class="fw-bolder bg-warning">Sweat trop stylé</h5>
+
                                 <!-- Product price-->
-                                <span class="text-muted text-decoration-line-through">40.00€</span>
+                                <span class="text-muted text-decoration-line-through ">40.00€</span>
                                 36.95€
                             </div>
                         </div>
@@ -134,10 +129,10 @@
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
                             Soldé!</div>
                         <!-- Product image-->
-                        <img class="card-img-top" src="../assets/img/mug2.jpg" alt="..." />
+                        <div class="shop1">  <img class="card-img-top" src="../assets/img/mug2.jpg" alt="..." /> </div>
                         <!-- Product details-->
                         <div class="card-body p-4">
-                            <div class="text-center">
+                            <div class="text-center bg-warning">
                                 <!-- Product name-->
                                 <h5 class="fw-bolder">Mug grossier</h5>
                                 <!-- Product price-->
@@ -156,25 +151,12 @@
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- Product image-->
-                        <img class="card-img-top" src="../assets/img/pins2.jpg" alt="..." />
+                        <div class="shop1"> <img class="card-img-top" src="../assets/img/pins2.jpg" alt="..." /> </div>
                         <!-- Product details-->
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
                         <div class="card-body p-4">
-                            <div class="text-center">
+                            <div class="text-center bg-warning">
                                 <!-- Product name-->
                                 <h5 class="fw-bolder">Pin's</h5>
-                                <!-- Product reviews-->
-                                <div class="d-flex justify-content-center small text-warning mb-2">
-                                    <div class="bi-star-fill"></div>
-                                    <div class="bi-star-fill"></div>
-                                    <div class="bi-star-fill"></div>
-                                    <div class="bi-star-fill"></div>
-                                    <div class="bi-star-fill"></div>
-                                </div>
                                 <!-- Product price-->
                                 1.38€
                             </div>
