--- a/blagues.html
+++ b/blagues.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>B L A G U E S</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon.ico">
     <!-- Google fonts-->
     <link
       href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
@@ -88,16 +88,21 @@
                   <span class="section-heading-lower">Rions ensemble</span>
                 </h2>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Eveniet, optio ut. Eligendi dicta minima minus impedit
-                  temporibus a velit voluptas, magni blanditiis officiis
-                  doloribus nisi, in ad non nam laborum.
+                  Quelque soit le contexte de consulter un site de blagues, toutes les raisons sont bonnes pour se changer les idées. 
+                  Les blagues sont catégorisés afin de filtrer vos envies et vos besoins. 
                 </p>
                 <p class="mb-0">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Consectetur laboriosam, delectus eos, aliquam ipsum deleniti
-                  fugiat repellat amet unde quisquam corporis hic totam veniam
-                  facere magnam natus dolore, quidem fuga.
+                  Ci-dessous se retrouvent comme catégorie: 
+                  <li>Classique</li>
+                  <li>Animaux</li>
+                  <li>Nourriture</li>
+                  <li>Blonde</li>
+                  <li>Nationalité</li>
+                  <li>Carambar</li>
+                  <li>Culinaire</li>
+                  <li>Technologie</li>
+                  <li>Jeux de mots</li>
+                  <li>Toto</li>
                 </p>
               </div>
             </div>
