--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>B L A G O U N E T T E </title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon.ico">
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet" />
@@ -59,7 +59,11 @@
                                 <span class="section-heading-upper">Le but de ce site</span>
                                 <span class="section-heading-lower">Rire</span>
                             </h2>
-                            <p class="mb-0">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic culpa soluta ab ex dolor numquam perferendis eius, consequatur harum reiciendis! Cumque expedita vel, maiores excepturi beatae quas debitis iste ea.</p>
+                            <p class="mb-0">Bienvenue sur B l a g o u n e t t e! </p>
+                            <p>Ici sont répertoriés les blagues les plus drôles d'Internet ! 
+                                Il y a également un référencement sur les goodies les plus insolites à offrir pour soi ou pour son entourage. </p>
+                                <p>Fous rire garantis!</p>
+                                <p> Bon amusement & bonne visite sur B l a g o u n e t t e</p>
                         </div>
                     </div>
                 </div>
