--- a/blagues.html
+++ b/blagues.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>B L A G U E S</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon.ico">
     <!-- Google fonts-->
     <link
       href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
