FEAT/FIX A propros

--- a/about.html
+++ b/about.html
@@ -64,6 +64,14 @@
                                 Marine
                                 <span class="ms-auto"> testeuse en herbe</span>
                             </li>
+                            <li class="list-unstyled-item list-hours-item d-flex">
+                                Raph
+                                <span class="ms-auto"> formateur expérimenté</span>
+                            </li>
+                            <li class="list-unstyled-item list-hours-item d-flex">
+                                Wahim
+                                <span class="ms-auto"> formateur expérimenté</span>
+                            </li>
                         </ul>
                         <p class="address mb-5">
                             <em>
@@ -79,9 +87,13 @@
                         </br>
                         07 99 32 45 09
                         <br>
-                        <a href="https://www.facebook.com/profile.php?id=100093982512086"><img src="./assets/img/facebook-logo-10.png" alt="Logo facebook" id="facebook"></a>
-                        <a href="https://www.instagram.com/damdaammdmmt/?hl=fr"><img src="./assets/img/instagram-logo-eps-png-instagram-logo-1784.png" alt="Logo instagram" id="instagram"></a>
-                        <a href="https://www.tiktok.com/@blagounette59"><img src="./assets/img/TikTok-Logo.png" alt="Logo tiktok" id="tiktok"></a>
+                        <a href="https://www.facebook.com/profile.php?id=100093982512086"><img
+                                src="./assets/img/facebook-logo-10.png" alt="Logo facebook" id="facebook"></a>
+                        <a href="https://www.instagram.com/damdaammdmmt/?hl=fr"><img
+                                src="./assets/img/instagram-logo-eps-png-instagram-logo-1784.png" alt="Logo instagram"
+                                id="instagram"></a>
+                        <a href="https://www.tiktok.com/@blagounette59"><img src="./assets/img/TikTok-Logo.png"
+                                alt="Logo tiktok" id="tiktok"></a>
                         </p>
                     </div>
                 </div>
@@ -99,12 +111,25 @@
                                 <span class="section-heading-upper">Sponsors</span>
                                 <span class="section-heading-lower">La survie de Blagounette</span>
                             </h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione modi earum natus! Iure delectus alias aliquam repellendus quia veritatis facere sunt nesciunt sequi, saepe, magnam itaque, ipsa id deserunt accusamus.</p>
+                            <p>Créer un site aussi audacieux nécessite un soutien. </p>
                             <p class="mb-0">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat cupiditate repudiandae ea. Corrupti dolores cumque quis dolore tempora sint veniam rem eius eos vel. Iste quos distinctio dolore officia aut.
-                                <em>Lorem ipsum</em>
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam placeat sapiente temporibus ipsum doloremque debitis laudantium voluptatibus facere ipsa dolore, at culpa sit, soluta incidunt qui repudiandae, iure suscipit vel?
+                                En effet, B l a g o u n e t t e existe grâce à ses sponsors et ses partenaires. Nous
+                                tenons à les <em>remercier</em>
+                                <li><a href="https://www.carambarco.com/">Carambar</a></li>
+                                <li> <a href="https://www.topito.com/">Topito</a> </li>
+                                <li> <a href="https://9gag.com/">9GAG</a></li>
+                                <li><a href="https://makeitmeme.com/fr/">Make It Meme</a></li>
+                                <li><a href="./assets/img/Festivalaudelà.png">Festival L'Au-delà</a></li>
+                                <li><a href="https://www.amazon.fr/">Amazon</a></li>
+                                <li><a href="https://www.ebay.fr/">eBay</a>
+                                </li>
                             </p>
+                            <p>Les liens vers les articles d'Amazon sont affiliés. Nous touchons une petite commission
+                                lors de votre achat, ce qui n'affecte pas le prix affiché.
+                                Cela permet de faire vivre le site. </p>
+                            <p> Pour toute question, n'hésitez pas à nous suivre sur nos réseaux et/ou nous faire un
+                                mail.</p>
+
                         </div>
                     </div>
                 </div>
@@ -114,7 +139,8 @@
     <footer class="footer text-faded text-center py-5">
         <div class="container">
             <div><img src="./assets/img/logo.png" alt="Logo Blagounette sobre"></div>
-            <p class="m-0 small">Copyright &copy; Blagounette 2023 |Dam pour la nurserie, CSS119</p></div>
+            <p class="m-0 small">Copyright &copy; Blagounette 2023 |Dam pour la nurserie, CSS119</p>
+        </div>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
