--- a/about.html
+++ b/about.html
@@ -127,8 +127,7 @@
                             <p>Les liens vers les articles d'Amazon sont affiliés. Nous touchons une petite commission
                                 lors de votre achat, ce qui n'affecte pas le prix affiché.
                                 Cela permet de faire vivre le site. </p>
-                            <p> Pour toute question, n'hésitez pas à nous suivre sur nos réseaux et/ou nous faire un
-                                mail.</p>
+                            <p> Pour toute question, n'hésitez pas à nous suivre sur nos réseaux et/ou nous contacter.</p>
 
                         </div>
                     </div>
