--- a/article/article.html
+++ b/article/article.html
@@ -26,8 +26,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="./accueil.html">Accueil</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="../about.html">Partenaires</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="../index.html">Blagounette</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="../about.html">Partenaire</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="../article/article.html">Articles</a></li>
                     
                 </ul>
             </div>
