FIX: articles et boutiques

--- a/boutique.html
+++ b/boutique.html
@@ -53,16 +53,19 @@
                         </h2>
                     </div>
                 </div>
-                <a href="https://www.amazon.fr/quotedazur-Mug-Bonne-Humeur-Gueule/dp/B09BZPTX3R/ref=sr_1_6?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1FPA07D4I93L0&keywords=mug&qid=1689512346&sprefix=mug%2Caps%2C90&sr=8-6&th=1">  <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/adj-mug.jpg"
-                    alt="Mug drôle" /></a>
-                    
+                <a
+                    href="https://www.amazon.fr/quotedazur-Mug-Bonne-Humeur-Gueule/dp/B09BZPTX3R/ref=sr_1_6?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1FPA07D4I93L0&keywords=mug&qid=1689512346&sprefix=mug%2Caps%2C90&sr=8-6&th=1">
+                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0"
+                        src="assets/img/adj-mug.jpg" alt="Mug drôle" /></a>
+
                 <div class="product-item-description d-flex me-auto">
-                    <div class="bg-faded p-5 rounded"><br class="mb-0">Lorem ipsum, dolor sit amet consectetur
-                        adipisicing elit. Ipsam quidem repellendus minus animi obcaecati recusandae, nam, labore
-                        repudiandae sed repellat natus quis est ab omnis voluptas, ullam sunt officia nesciunt.
+                    <div class="bg-faded p-5 rounded"><br class="mb-0">Quoi de mieux de dire subtilement un gros-mot
+                        sans se faire taper sur les doigts?
+                        Grâce à ce mug, fini les ennuis du matin. Tranquilité garantie !
+                        <p> Envie d'acheter ce mug ? Cliquez sur l'image. </p>
                         </br>
-                        <a
-                            href="./article/accueil.html">Clique ici si tu veux voir d'autres ton mug à prendre pour le boulot</a>
+                        <p><em>*Lien affilié</em></p>
+                        Vous voulez d'autres mugs à blagues ? <a href="./article/accueil.html">Cliquez ici</a>!
                         </p>
                     </div>
                 </div>
@@ -80,18 +83,21 @@
                         </h2>
                     </div>
                 </div>
-                <a href="https://www.amazon.fr/Prochaine-Connerie-En-Cours-Chargement/dp/B08HLCBD5L/ref=sr_1_12?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1UPMKGW707LAT&keywords=sweat+dr%C3%B4le&qid=1689512619&sprefix=sweat+dr%C3%B4le%2Caps%2C79&sr=8-12"><img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/sweat.jpg"
-                    alt="Sweat drôle" /></a>
-                    
+                <a
+                    href="https://www.amazon.fr/Prochaine-Connerie-En-Cours-Chargement/dp/B08HLCBD5L/ref=sr_1_12?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1UPMKGW707LAT&keywords=sweat+dr%C3%B4le&qid=1689512619&sprefix=sweat+dr%C3%B4le%2Caps%2C79&sr=8-12"><img
+                        class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0"
+                        src="assets/img/sweat.jpg" alt="Sweat drôle" /></a>
+
                 <div class="product-item-description d-flex ms-auto">
                     <div class="bg-faded p-5 rounded">
-                        <p class="mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis odit
-                            architecto modi quia beatae placeat, sint ipsam velit soluta saepe assumenda ad ipsum autem
-                            maxime magnam. Quisquam officia a quidem!
-                            <br>
-                            <a
-                                href="./article/accueil.html">Clique
-                                ici pour voir d'autres sweats</a>
+                        <p class="mb-0">Le matin, il ne fait pas généralement chaud... D'où l'utilité d'avoir un sweat
+                            avec une petite vanne pour décrocher les sourires sur les visages de votre entourage. Très
+                            chaleureux, n'est-ce pas?
+
+                        <p>Pour shopper ce sweat pour le mettre dans son sac, cliquez sur l'image.</p>
+                        <p><em>*Lien affilié</em></p>
+                        <br>
+                        Envie de voir les autres sweats ? <a href="./article/accueil.html">Cliquez ici</a>!
                         </p>
                     </div>
                 </div>
@@ -109,18 +115,21 @@
                         </h2>
                     </div>
                 </div>
-                <a href="https://www.amazon.fr/Prochaine-Connerie-En-Cours-Chargement/dp/B08HLCBD5L/ref=sr_1_12?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1UPMKGW707LAT&keywords=sweat+dr%C3%B4le&qid=1689512619&sprefix=sweat+dr%C3%B4le%2Caps%2C79&sr=8-12"> <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/pins.PNG" >
+                <a
+                    href="https://www.amazon.fr/Prochaine-Connerie-En-Cours-Chargement/dp/B08HLCBD5L/ref=sr_1_12?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1UPMKGW707LAT&keywords=sweat+dr%C3%B4le&qid=1689512619&sprefix=sweat+dr%C3%B4le%2Caps%2C79&sr=8-12">
+                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0"
+                        src="assets/img/pins.PNG">
                 </a>
-                    alt="Pin drôle à accrocher sur le vêtement" />
+                alt="Pin drôle à accrocher sur le vêtement" />
                 <div class="product-item-description d-flex me-auto">
                     <div class="bg-faded p-5 rounded">
-                        <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla minima ratione
-                            architecto excepturi explicabo amet eaque pariatur totam maiores libero beatae iure tempore
-                            laborum, magnam nobis? Expedita nostrum incidunt esse?
-                            <br>
-                            <a
-                                href="./article/accueil.html">Clique
-                                ici pour trouver d'autres pins pour le sweat que tu viens d'acheter...</a>
+                        <p class="mb-0">
+                            Anxiété sociale ou tout simplement, vous n'aimez pas les gens ? Plus de souci avec cette
+                            broche qui montre votre envie de dialoguer avec l'extérieur !
+                        <p>Si vous voulez avoir votre <em>social battery</em>, cliquez sur l'image. </p>
+                        <p><em>*Lien affilié</em></p>
+                        <br>
+                        Pour varier les plaisirs, <a href="./article/accueil.html">cliquez ici</a>!
                         </p>
                     </div>
                 </div>
