--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             </h2>
                             <p class="mb-0">Bienvenue sur B l a g o u n e t t e! </p>
                             <p>Ici sont répertoriés les blagues les plus drôles d'Internet ! 
-                                Il y a également un référencement sur les goodies les plus insolites à offrir pour soi ou pour son entourage. </p>
+                                Il y a également un référencement sur les goodies les plus insolites, les plus beaux et les plus drôles à offrir pour soi ou pour son entourage. </p>
                                 <p>Fous rire garantis!</p>
                                 <p> Bon amusement & bonne visite sur B l a g o u n e t t e</p>
                         </div>
