FEAT + FIX blagues

--- a/blagues.html
+++ b/blagues.html
@@ -99,10 +99,8 @@
       </div>
     </section>
     <main class="container">
-    <h1>Blagues</h1>
-
     <div class="form-group">
-      <label for="categorieSelect">Catégorie :</label>
+      <label for="categorieSelect" id="catecolor">Catégorie :</label>
       <select id="categorieSelect" class="form-control">
         <option value="toutes" selected>Toutes</option>
         <!-- Les options des catégories seront générées dynamiquement -->
