FIX: article accueil

--- a/article/accueil.html
+++ b/article/accueil.html
@@ -19,7 +19,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-gradient" >
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="../index.html">B L A G O U N E T T E</a>
+            <a class="navbar-brand" href="../boutique.html">Revenir sur B L A G O U N E T T E</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -46,7 +46,8 @@
                             B o u t i q u e 
                         </h2>
                        <h5>Ici se trouve la boutique qui reférence les meilleures ventes de goodies d'Internet de nos partenaires. 
-                       <p> Consultez ci-dessous les cinq articles les plus vendus ce moment sur <em>Amazon & eBay</em>, nos partenaires, dans les goodies humoristiques.. </p>
+                       <p> Consultez ci-dessous les articles les plus vendus ce moment sur <em>Amazon & eBay</em> dans les goodies humoristiques... </p>
+                       <p><em>*Liens affiliés</em></p>
                        </h5>
 
                     </div>
