feat: pagination responsive et fonctionnelle

--- a/blagues.html
+++ b/blagues.html
@@ -109,6 +109,7 @@
 
     <div id="blagues" class="mt-3"></div>
 
+    <div id="paginationText" class="text-center text-md-left"></div>
     <ul id="pagination" class="pagination"></ul>
   </main>
 
