--- a/about.html
+++ b/about.html
@@ -69,7 +69,8 @@
                             <p>Les liens vers les articles d'Amazon sont affiliés. Nous touchons une petite commission
                                 lors de votre achat, ce qui n'affecte pas le prix affiché.
                                 Cela permet de faire vivre le site. </p>
-                            <p> Pour toute question, n'hésitez pas à nous contacter sur nos réseaux ou en envoyant un mail.</p>
+                            <p> Pour toute question, n'hésitez pas à nous contacter sur nos réseaux ou en envoyant un
+                                mail.</p>
 
                         </div>
                     </div>
@@ -83,44 +84,28 @@
                 <div class="col-xl-9 mx-auto">
                     <div class="cta-inner bg-faded text-center rounded">
                         <h2 class="section-heading mb-5">
-                            <span class="section-heading-upper">Qui est-ce ?</span>
-                            <span class="section-heading-lower">Dam & co</span>
+                            <span class="section-heading-upper">Réclamations ? Remarques ? Retour d'expérience ? </span>
+                            <span class="section-heading-lower">Contactez-nous !</span>
                         </h2>
-                        <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
-                            <li class="list-unstyled-item list-hours-item d-flex">
-                                Dam
-                                <span class="ms-auto">développeuse en herbe </span>
-                            </li>
-                            <li class="list-unstyled-item list-hours-item d-flex">
-                                Damien
-                                <span class="ms-auto">blagueur en herbe </span>
-                            </li>
-                            <li class="list-unstyled-item list-hours-item d-flex">
-                                Marine
-                                <span class="ms-auto"> testeuse en herbe</span>
-                            </li>
-                            <li class="list-unstyled-item list-hours-item d-flex">
-                                Raph
-                                <span class="ms-auto"> formateur expérimenté</span>
-                            </li>
-                            <li class="list-unstyled-item list-hours-item d-flex">
-                                Wahim
-                                <span class="ms-auto"> formateur expérimenté</span>
-                            </li>
-                        </ul>
                         <p class="address mb-5">
                             <em>
                                 <strong>Siège social</strong>
                                 <br />
-                                B.D.D - Blague de Dam, Belgique
+                                B.D.D - Blague de Dam, France
                             </em>
+                            <br>
+                            165 Avenue de Belgique
+                            59000 Lille
+
+                            <br />
+                            <br>
+                            <em>Adresse mail:</em> contact@blagounette.be
+                            </br>
+                            <em>Téléphone:</em> 03 59 60 51 58
+                            <br>
                         </p>
                         <br class="mb-0">
-                        <small><em>Envie de garder</em> contact ?</small>
-                        <br />
-                        damburton@blagounette.be
-                        </br>
-                        07 99 32 45 09
+                        <small><em>Envie de nous</em> suivre ?</small>
                         <br>
                         <a href="https://www.facebook.com/profile.php?id=100093982512086"><img
                                 src="./assets/img/facebook-logo-10.png" alt="Logo facebook" id="facebook"></a>
