--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
 
                             <br />
                             <br>
-                            <em>Adresse mail:</em> contact@blagounette.be
+                            <em>Adresse mail:</em> contact@blagounette.fr
                             </br>
                             <em>Téléphone:</em> 03 59 60 51 58
                             <br>
