--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
                         <br>
                         <a href="https://www.facebook.com/profile.php?id=100093982512086"><img
                                 src="./assets/img/facebook-logo-10.png" alt="Logo facebook" id="facebook"></a>
-                        <a href="https://www.instagram.com/damdaammdmmt/?hl=fr"><img
+                        <a href="https://www.instagram.com/blagounettedu59/?hl=fr"><img
                                 src="./assets/img/instagram-logo-eps-png-instagram-logo-1784.png" alt="Logo instagram"
                                 id="instagram"></a>
                         <a href="https://www.tiktok.com/@blagounette59"><img src="./assets/img/TikTok-Logo.png"
